@@ -13,7 +13,22 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
     template: `
 <div v-if="desktop" class="np-bar noselect">
 
- <v-layout row class="np-controls">
+ <v-layout row class="np-controls" v-if="stopButton">
+  <v-flex xs3>
+   <v-btn flat icon @click="doAction(['button', 'jump_rew'])"><v-icon large>skip_previous</v-icon></v-btn>
+  </v-flex>
+  <v-flex xs3>
+   <v-btn flat icon large v-if="playerStatus.isplaying" @click="doAction(['pause'])" class="np-playpause"><v-icon large>pause_circle_outline</v-icon></v-btn>
+   <v-btn flat icon large v-else @click="doAction(['play'])" class="np-playpause"><v-icon large>play_circle_outline</v-icon></v-btn>
+  </v-flex>
+  <v-flex xs3>
+   <v-btn flat icon large @click="doAction(['stop'])" class="np-playpause"><v-icon large>stop</v-icon></v-btn>
+  </v-flex>
+  <v-flex xs3>
+   <v-btn flat icon @click="doAction(['playlist', 'index', '+1'])"><v-icon large>skip_next</v-icon></v-btn>
+  </v-flex>
+ </v-layout>
+ <v-layout row class="np-controls" v-else>
   <v-flex xs4>
    <v-btn flat icon @click="doAction(['button', 'jump_rew'])"><v-icon large>skip_previous</v-icon></v-btn>
   </v-flex>
@@ -135,7 +150,16 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
     </v-layout>
    </v-flex>
    <v-flex xs4>
-    <v-btn flat icon large v-if="playerStatus.isplaying" @click="doAction(['pause'])" class="np-playpause"><v-icon x-large>pause_circle_outline</v-icon></v-btn>
+    <v-layout v-if="stopButton" text-xs-center>
+     <v-flex xs6>
+      <v-btn flat icon large v-if="playerStatus.isplaying" @click="doAction(['pause'])"><v-icon large>pause_circle_outline</v-icon></v-btn>
+      <v-btn flat icon large v-else @click="doAction(['play'])"><v-icon large>play_circle_outline</v-icon></v-btn>
+     </v-flex>
+     <v-flex xs6>
+      <v-btn flat icon large @click="doAction(['stop'])"><v-icon large>stop</v-icon></v-btn>
+     </v-flex>
+    </v-layout>
+    <v-btn flat icon large v-else-if="playerStatus.isplaying" @click="doAction(['pause'])" class="np-playpause"><v-icon x-large>pause_circle_outline</v-icon></v-btn>
     <v-btn flat icon large v-else @click="doAction(['play'])" class="np-playpause"><v-icon x-large>play_circle_outline</v-icon></v-btn>
    </v-flex>
    <v-flex xs4>
@@ -530,6 +554,9 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
     computed: {
         infoPlugin() {
             return this.$store.state.infoPlugin
+        },
+        stopButton() {
+            return this.$store.state.stopButton
         },
         formattedTime() {
             return this.playerStatus && this.playerStatus.current
