@@ -169,6 +169,7 @@
 "Set Defaults":"",
 "Settings":"",
 "Should alarms repeat":"",
+"Show a stop button next to the play/pause button.":"",
 "Show all information":"",
 "Show artists or albums?":"",
 "Show context menu when clicking anywhere on an audio item.":"",
@@ -196,6 +197,7 @@
 "Start":"",
 "Start time":"",
 "Stop":"",
+"Stop button":"",
 "Sun":"",
 "Sunday":"",
 "Switch Off":"",
