@@ -121,6 +121,7 @@
 "Queue":"Aktuelle Wiedergabeliste",
 "Random Albums":"Zufällig Alben",
 "Random Mix":"Zufällige Wiedergabe",
+"Remaining duration of current track":"Verbleibende Dauer des aktuellen Titels",
 "Remote Libraries":"Entfernte Musiksammlungen",
 "Remove":"Entfernen",
 "Remove '%1' from favorites?":"Entferne '%1' aus den Favoriten?",
@@ -139,7 +140,9 @@
 "Sat":"Sam",
 "Saturday":"Samstag",
 "Save":"Speichern",
+"Save as default":"Als Standard speichern",
 "Save play queue":"Wiedergabeliste abspeichern",
+"Save the current settings as default for new users?":"Aktuelle Einstellungen als Standard für neue Anwender speichern?",
 "Scheduled alarms":"Aktive Wecker",
 "Scroll play queue when current track changes.":"Wiedergabeliste aktualisieren wenn Titel wechselt.",
 "Scroll to current track":"Zum aktuellen Titel springen",
@@ -151,6 +154,7 @@
 "Selected Genres":"Gewählte Stilrichtungen",
 "Server Settings":"Server-Einstellungen",
 "Server connection lost...":"Verbindung zum Server unterbrochen...",
+"Set Defaults":"Speichern",
 "Settings":"Einstellungen",
 "Should alarms repeat":"Soll Wecker wiederholt werden?",
 "Show all information":"Alle Informationen anzeigen",
@@ -204,6 +208,7 @@
 "Un-pin from main page":"Von Hauptseite entfernen",
 "Un-select":"Auswahl aufheben",
 "Unknown":"Unbekannt",
+"Update":"Aktualisieren",
 "Update information when song changes":"Informationen mit dem Titelwechsel synchronisieren",
 "Update playlists":"Wiedergabelisten aktualisieren",
 "Update rescan":"Aktualiseren",
@@ -257,11 +262,8 @@
 "OK":"",
 "Plugins":"",
 "Radio":"",
-"Remaining duration of current track": "Verbleibende Dauer des aktuellen Titels",
-"Save as default":"Als Standard speichern",
-"Save the current settings as default for new users?":"Aktuelle Einstellungen als Standard für neue Anwender speichern?",
-"Set Defaults":"Speichern",
+"Show a stop button next to the play/pause button.":"",
 "Sound":"",
 "Start":"",
-"Update":"Aktualisieren"
+"Stop button":""
 }
