@@ -206,6 +206,7 @@
 "Server connection lost...":"",
 "Set Defaults":"",
 "Should alarms repeat":"",
+"Show a stop button next to the play/pause button.":"",
 "Show all information":"",
 "Show artists or albums?":"",
 "Show context menu when clicking anywhere on an audio item.":"",
@@ -223,6 +224,7 @@
 "Standard Players":"",
 "Start":"",
 "Stop":"",
+"Stop button":"",
 "Switch Off":"",
 "Switch On":"",
 "Sync":"",
