@@ -7,6 +7,7 @@
 4. Fix mobile layout now playing info background and size.
 5. Draw stretched cover as now-playing background.
 6. Allow specifying player in URL via "?player=<mac>"
+7. Add option to show stop button.
 
 0.2.2
 -----
